--- a/.github/workflows/main_mandarin-bot-net-hug.yml
+++ b/.github/workflows/main_mandarin-bot-net-hug.yml
@@ -23,8 +23,8 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: https://index.docker.io/v1/
-        username: ${{ secrets.AzureAppService_ContainerUsername_18be84a961ad4cdda2a66b75f2cf8049 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_9eef61ad058646e38333a33cdea19dec }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
