--- a/.github/workflows/main_mandarin-bot-net-hug.yml
+++ b/.github/workflows/main_mandarin-bot-net-hug.yml
@@ -30,7 +30,7 @@ jobs:
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_18be84a961ad4cdda2a66b75f2cf8049 }}/aleksbobdocker/mandarinbot:${{ github.sha }}
+        tags: index.docker.io/${{ secrets.DOCKER_USERNAME }}/mandarinbot:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
